<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResumeGame">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="4"
                android:layout_marginVertical="15dp"
                android:id="@+id/resume_game_top_panel_linearLayout">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Difficulty"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_weight="1"
            android:id="@+id/resume_game_difficulty_textView" />
        <Chronometer
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerHorizontal="true"
            android:layout_weight="2"
            android:id="@+id/resume_game_chronometer" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Mistakes: 0/3"
            android:gravity="center"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:id="@+id/resume_game_mistakes_textView" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        android:layout_below="@+id/resume_game_top_panel_linearLayout"
        android:scrollbars="vertical"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/resume_game_recycler_view"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/resume_game_recycler_view"
        android:id="@+id/resume_game_score_linearLayout"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/resume_game_score_textView"
            android:text="Score: 0" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4"
        android:layout_marginTop="5dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/resume_game_utility_linearLayout"
        android:layout_below="@+id/resume_game_score_linearLayout">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/resume_game_undo_btn"
                app:srcCompat="@drawable/ic_undo" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:clickable="false"
                android:text="Undo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/resume_game_erase_btn"
                app:srcCompat="@drawable/ic_clean" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:clickable="false"
                android:text="Erase" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageButton
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/resume_game_notes_btn"
                app:srcCompat="@drawable/ic_notes" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:clickable="false"
                android:text="Notes" />
        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/resume_game_hints_constraint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <androidx.cardview.widget.CardView
                android:id="@+id/resume_game_count_badge_cardView"
                android:layout_width="20dp"
                android:layout_height="20dp"
                app:cardBackgroundColor="@android:color/holo_blue_dark"
                app:cardCornerRadius="50dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/resume_game_count_badge_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageButton
                    android:id="@+id/resume_game_hints_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_alert" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="false"
                    android:gravity="center"
                    android:text="Hints" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="9"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="10dp"
        android:id="@+id/new_game_linearLayout"
        android:layout_below="@+id/resume_game_utility_linearLayout">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/one"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/button_bg"
            android:id="@+id/resume_game_one_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/button_bg"
            android:id="@+id/resume_game_two_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/button_bg"
            android:id="@+id/resume_game_three_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/button_bg"
            android:id="@+id/resume_game_four_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/button_bg"
            android:id="@+id/resume_game_five_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/button_bg"
            android:id="@+id/resume_game_six_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/button_bg"
            android:id="@+id/resume_game_seven_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/button_bg"
            android:id="@+id/resume_game_eight_btn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:layout_weight="1"
            android:onClick="onClick"
            android:background="@drawable/button_bg"
            android:id="@+id/resume_game_nine_btn"/>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_game_linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Submit"
        android:id="@+id/resume_game_submit_btn"/>
    </RelativeLayout>
    </ScrollView>
</RelativeLayout>