<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatisticsFragment"
    android:orientation="vertical">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="6">
            <Button
                android:id="@+id/beginner_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Beginner" />
            <Button
                android:id="@+id/easy_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Easy" />

            <Button
                android:id="@+id/medium_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Medium" />

            <Button
                android:id="@+id/hard_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Hard" />
            <Button
                android:id="@+id/expert_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Expert" />
        </LinearLayout>
    </HorizontalScrollView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:elevation="50dp">
                <LinearLayout
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="6"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="4"
                            android:text="Game Difficulty"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="2"
                            android:text="-"
                            android:gravity="end"
                            android:id="@+id/games_difficulty" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="5"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="4"
                            android:text="@string/games_played"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:text="-"
                            android:gravity="end"
                            android:id="@+id/games_played_textView" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="5"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="4"
                            android:text="@string/games_won"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:text="-"
                            android:gravity="end"
                            android:id="@+id/games_won_textView" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="5"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="4"
                            android:text="@string/games_lost"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:text="-"
                            android:gravity="end"
                            android:id="@+id/games_lost_textView" />
                    </LinearLayout>
                    <!--<TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="10dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/games_played_textView"
                        android:text="@string/games_played"/>
                    android:layout_marginVertical="10dp"
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="10dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/games_won_textView"
                        android:text="@string/games_won"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingVertical="10dp"
                        android:paddingLeft="10dp"
                        android:id="@+id/games_lost_textView"
                        android:text="@string/games_lost"/>-->
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:elevation="50dp">
                <LinearLayout
                    android:layout_width="375dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="9"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="2"
                            android:text="@string/win_rate" />

                        <ProgressBar
                            android:layout_width="0dp"
                            android:layout_marginVertical="12.5dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:id="@+id/win_rate_progressBar"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="2"
                            android:id="@+id/win_rate_textView"
                            android:gravity="end"
                            android:text="000%"/>
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="9"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginLeft="10dp"
                            android:layout_weight="2"
                            android:text="@string/loss_rate"/>
                        <ProgressBar
                            android:layout_width="0dp"
                            android:layout_marginVertical="12.5dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="5"
                            android:id="@+id/loss_rate_progressBar"
                            style="@style/Widget.AppCompat.ProgressBar.Horizontal"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="2"
                            android:id="@+id/loss_rate_textView"
                            android:gravity="end"
                            android:text="000%"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:elevation="50dp">
                <LinearLayout
                    android:layout_width="375dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="5"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="4"
                            android:text="@string/top_score"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:text="-"
                            android:id="@+id/top_score_textView"
                            android:gravity="end" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="5"
                        android:orientation="horizontal">
                        <!--https://www.youtube.com/watch?v=K5bFv_WDjVY-->
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="4"
                            android:text="@string/low_score"/>
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:text="-"
                            android:id="@+id/low_score_textView"
                            android:gravity="end" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_marginTop="25dp"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_height="wrap_content"
                android:elevation="50dp">
                <LinearLayout
                    android:layout_width="375dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="5"
                        android:orientation="horizontal">
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="4"
                            android:text="@string/quickest_game"/>
                        <Chronometer
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:id="@+id/quickest_game_chrono"
                            android:gravity="end" />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="375dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:weightSum="5"
                        android:orientation="horizontal">
                        <!--https://www.youtube.com/watch?v=K5bFv_WDjVY-->
                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginHorizontal="10dp"
                            android:layout_weight="4"
                            android:text="@string/longest_game"/>
                        <Chronometer
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="10dp"
                            android:layout_marginRight="10dp"
                            android:layout_weight="1"
                            android:id="@+id/longest_game_chrono"
                            android:gravity="end" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp">
                <Button
                    android:id="@+id/reset_data_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/reset" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>